# Ucv-ate-si-lab-03

./: README.md  sonar-project.properties
.github/workflows/: main.yml
laboratorio3-kedro/: pyproject.toml
laboratorio3-kedro/src/laboratorio3_kedro/: pipeline_registry.py
laboratorio3_kedro/: pyproject.toml
laboratorio3_kedro/laboratorio3-kedro/: pyproject.toml
laboratorio3_kedro/laboratorio3-kedro/conf/base/: catalog.yml
laboratorio3_kedro/laboratorio3-kedro/src/laboratorio3_kedro/pipelines/histogram/: analyzer.py  nodes.py
