[project]
name = "laboratorio3-kedro"
version = "0.1.0"
description = "Laboratorio 3 - Análisis de Histogramas con Kedro y POO"
authors = [{name = "Joaquin Mendez"}]
requires-python = ">=3.12"
dependencies = [
    "kedro~=1.3.1",
    "opencv-python>=4.0.0",
    "numpy>=1.20.0",
    "matplotlib>=3.0.0",
    "kedro-datasets[json] (>=9.3.0,<10.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.kedro]
package_name = "laboratorio3_kedro"
project_name = "laboratorio3_kedro"
kedro_init_version = "1.3.1"
source_dir = "src"
[tool.kedro_telemetry]
project_id = "a26574e398a34ecc96cfbf67b52ae90b"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)"
]
